# s2vit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml
requirements/: requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  requirements.workflows.in  requirements.workflows.txt
src/flash_tinyvit/: __init__.py  _version.py  block_tiny_vit.py  nn.py  nn_test.py
src/s2vit/: __init__.py  _version.py  nn.py  nn_test.py  ops.py  transformer.py  utils.py
workflows/imagenette/: train.py
