[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "s2vit"
version = "0.4.0"
authors = [
    { name = "Miller Wilt", email = "miller@pyriteai.com" },
]
description = "Spatial Shift Vision Transformer"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements.in"] }

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
select = ["B", "E", "F", "I", "W"]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
